metadata/force-app/main/default/objects/CustomName_xYtvj__c/CustomName_xYtvj__c.object-meta.xml
<CustomObject>
    <description>Description_aSDKN</description>
    <label>CustomLabel_QpniU</label>
    <nameField>
        <label>CustomLabel_QpniU</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>CustomLabel_QpniUs</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>