metadata/force-app/main/default/objects/CustomName_xYtvj__c/fields/CustomField_eHnWp__c.field-meta.xml
<CustomField>
    <fullName>CustomField_eHnWp__c</fullName>
    <description>Testing Creation of Custom object</description>
    <inlineHelpText>testhelp</inlineHelpText>
    <label>CusFieldAHAwR</label>
    <length>255</length>
    <type>Text</type>
</CustomField>