metadata/force-app/main/default/objects/CustomName_xYtvj__c/fields/CustomField_oBxtj__c.field-meta.xml
<CustomField>
    <fullName>CustomField_oBxtj__c</fullName>
    <description>Testing Creation of Custom object</description>
    <inlineHelpText>testhelp</inlineHelpText>
    <label>CusFieldRIVzh</label>
    <length>255</length>
    <type>Text</type>
</CustomField>